[package]
name = "ai-content-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.23.1"
axum = "0.7.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
thiserror = "1.0.61"
tokio = "1.28.2"
